# coq-of-rust

./: .gitconfig  .gitignore  .gitmodules  Cargo.toml  LCENSE  README.md  clippy.toml  coq-of-rust-config.json  coq_of_rust_lib.v  run_tests.py  rust-toolchain  scale-info
CoqOfRust/: ._CoqProject.swp  .gitignore  CoqOfRust.v  M.v  MT.v  M_link.v  Makefile  Monad.v  MonadicNotationExample.v  RecordUpdate.v  StateMonad.v  _CoqProject  blacklist.txt  bugs.md  configure.sh  coq-of-rust.opam  coqc_logs.txt  count_modules.py  examples  examples_axiomatized  generate_ink_example.sh  links.py  make_and_detect_warnings.py  make_and_detect_warnings.sh  num_traits.v  of_json.py  test_write_file.py  what_we_do.md
CoqOfRust/Proofs/: M.v
CoqOfRust/Simulations/: M.v  bool.v  option.v
CoqOfRust/_std/: alloc.v  array.v  ascii.v  async_iter.v  backtrace.v  borrow.v  boxed.v  char.v  cmp.v  collections.v  convert.v  default.v  env.v  error.v  ffi.v  fmt.v  fs.v  future.v  hash.v  hint.v  io.v  iter.v  iter_type.v  marker.v  mem.v  net.v  num.v  ops.v  option.v  os.v  panicking.v  path.v  pin.v  prelude.v  primitive.v  process.v  ptr.v  rc.v  result.v  simd.v  (+8 more)
CoqOfRust/alloc/: alloc.json  alloc.v  borrow.json  borrow.v  boxed.json  boxed.v  collections.v  fmt.json  fmt.v  raw_vec.json  raw_vec.v  rc.v  slice.json  slice.v  str.json  str.v  string.v  sync.v  task.json  task.v  vec.v
CoqOfRust/alloy_primitives/: aliases.v  common.v  lib.v  sealed.v
CoqOfRust/bytes/: bytes.v  bytes_mut.v  lib.v  loom.v
CoqOfRust/core/: alloc.v  any.json  any.v  arch.v  array.v  ascii.json  ascii.v  asserting.json  asserting.v  bool.json  bool.v  borrow.json  borrow.v  cell.json  cell.v  char.v  clone.json  clone.v  cmp.json  cmp.v  convert.v  default.json  default.v  error.json  error.v  escape.json  escape.v  f32.v  fmt.v  hash.v  hint.json  hint.v  intrinsics.json  intrinsics.v  iter.v  marker.json  marker.v  mem.v  num.v  ops.v  (+28 more)
CoqOfRust/experiments/: FunctionNotation.v  MonadExperiments.v  StateMonad.v
CoqOfRust/halo2_proofs/: arithmetic.v  circuit.v  dev.v  helpers.v  parallel.v  plonk.v  poly.v  transcript.v
CoqOfRust/ink/: Env.v  alloc.v  erc20.err  erc20.v  erc20_expanded.rs  erc20_hand_patched.v  ink.v  ink_allocator.v  ink_e2e.v  ink_e2e_hand_modified.v  ink_e2e_macro.v  ink_engine.v  ink_env.v  ink_ir.v  ink_macro.v  ink_metadata.v  ink_prelude.v  ink_primitives.v  ink_storage.v  ink_storage_traits.json  ink_storage_traits.v  pallet_contracts_primitives.v  parity_scale_codec.v  primitive_types.v  proc_macro2.v  scale_decode.v  scale_encode.v  scale_info.v  serde.v  sp_core.v  sp_keyring.v  sp_runtime.v  sp_weights.v  subxt.v  syn.v  synstructure.v  update_after_translation.py
CoqOfRust/lib/: Notations.v  lib.v
CoqOfRust/links/: M.v  lib.v
CoqOfRust/move/: README.md  move_core_types.v
cli/: Cargo.toml
(+5037 files in other folders)
