[package]
name = "coq-of-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coq_of_rust"
path = "src/main.rs"

[dependencies]
pretty = "0.11.3"

[package.metadata.rust-analyzer]
rustc_private=true
