[package]
name = "coq_of_rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coq-of-rust"
path = "src/main.rs"

[dependencies]
coq_of_rust_lib = { path = "../lib" } 
clap = { version = "4.1.4", features = ["derive"] }
